# Opencv

./: .gitignore
Chessboard Detector/: main.cpp
Click2Shape/: AppState.cpp  AppState.h  CMakeLists.txt  Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  main.cpp
Filter _and_Histogram_Photo_Editor/Filter _and_Histogram_Photo_Editor/: ImageProcesser.cpp  ImageProcesser.h  main.cpp
Image Processor/: CMakeLists.txt  imageProcessor.cpp  imageProcessor.h  main.cpp
ImageGradient/: CMakeLists.txt  imageGradient.cpp  imageGradient.h  main.cpp
Interactive image window/: Interactive image window.sln
Interactive image window/Interactive image window/: ImageProcessor.cpp  ImageProcessor.h  Interactive image window.vcxproj  Interactive image window.vcxproj.filters  main.cpp
Interactive image window/Interactive image window/x64/Debug/: Interactive image window.exe.recipe  vc143.idb
Interactive image window/Interactive image window/x64/Debug/Interact.19203932.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Interactive image window.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
ShapePainter/: CMakeLists.txt  Circle.cpp  Circle.h  Line.cpp  Line.h  RectangleShape.cpp  RectangleShape.h  Shape.cpp  Shape.h  main.cpp
Transformation_Photo_Editor/: CMakeLists.txt  ImageTransformer.cpp  ImageTransformer.h  main.cpp
User_story/: CMakeLists.txt  main.cpp
createTrackbar/: CMakeLists.txt  main.cpp
filter/: CMakeLists.txt  main.cpp
histogram/: CMakeLists.txt  main.cpp
image_filter/image_filter/: ImageProcessor.cpp  ImageProcessor.h  main.cpp
operator/: CMakeLists.txt  HistImage.cpp  HistImage.h  main.cpp
testCamera/: CMakeLists.txt  main.cpp
video2/: CMakeLists.txt  main.cpp
video_/: CMakeLists.txt  main.cpp
